hw21 - реализации классов моделей