@@ -2,29 +2,32 @@ package ru.otus.core.repository;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import java.util.List;
 import java.util.Optional;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import ru.otus.base.AbstractHibernateTest;
+import ru.otus.crm.model.Address;
 import ru.otus.crm.model.Client;
+import ru.otus.crm.model.Phone;
 
 @SuppressWarnings("java:S125")
 class DataTemplateHibernateTest extends AbstractHibernateTest {
 
     @Test
-    @Disabled("Удалить при выполнении ДЗ")
     @DisplayName(" корректно сохраняет, изменяет и загружает клиента по заданному id")
     void shouldSaveAndFindCorrectClientById() {
         // given
-        var client = new Client("Вася");
+        // var client = new Client("Вася");
 
         // Это надо раскомментировать, у выполненного ДЗ, все тесты должны проходить
         // Кроме удаления комментирования, тестовый класс менять нельзя
-        /*
-                var client = new Client(null, "Vasya", new Address(null, "AnyStreet"), List.of(new Phone(null, "13-555-22"),
-                        new Phone(null, "14-666-333")));
-        */
+
+        var client = new Client(
+                null,
+                "Vasya",
+                new Address(null, "AnyStreet"),
+                List.of(new Phone(null, "13-555-22"), new Phone(null, "14-666-333")));
 
         // when
         var savedClient = transactionManager.doInTransaction(session -> {
@@ -66,7 +69,7 @@ class DataTemplateHibernateTest extends AbstractHibernateTest {
 
         // then
         assertThat(clientList).hasSize(1);
-        assertThat(clientList.getFirst()).usingRecursiveComparison().isEqualTo(savedClient);
+        assertThat(clientList.get(0)).usingRecursiveComparison().isEqualTo(savedClient);
 
         // when
         clientList = transactionManager.doInReadOnlyTransaction(
@@ -76,6 +79,6 @@ class DataTemplateHibernateTest extends AbstractHibernateTest {
 
         // then
         assertThat(clientList).hasSize(1);
-        assertThat(clientList.getFirst()).usingRecursiveComparison().isEqualTo(savedClient);
+        assertThat(clientList.get(0)).usingRecursiveComparison().isEqualTo(savedClient);
     }
 }
